[package]
name = "lifesuite_journal_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"

lifesuite_common = { path = "../common" }
